<resources>
    <string name="app_name">TruthOrAction</string>
    <string name="action">Action</string>
    <string name="truth_text">Truth</string>
    <string name="random" translatable="false">R</string>
    <string name="round" translatable="false">%1$d/%2$d</string>
    <string name="name" translatable="false">%1$s</string>
    <string name="game_menu">Game</string>
    <string name="players_menu">Players</string>
    <string name="settings_menu">Settings</string>
    <string name="action_done">Done</string>
    <string name="action_roll">Roll</string>
    <string name="clear_history">Clear history</string>
    <string name="add_player_description">Add player</string>
    <string name="tokenHint">Gemini Token</string>
    <string name="settingsHint">Additional Settings</string>
    <string name="queue_of">Answering: %1$s</string>
    <string name="restart">Restart application for apply</string>
    <string name="http_error">Http Error %1$d</string>
    <string name="illegal_region">Illegal Country, please use VPN</string>
    <string name="parse_error">Error parsing AI result</string>
    <string name="quota_limit">Quota Limit exceed, please wait</string>
    <string name="adduser">Add people</string>
    <string name="roll_and_clear">Roll and Forget</string>
    <string name="player_index" translatable="false">%1$d</string>
    <string name="insert_token">Gemini Token Not Inserted</string>
    <string name="more_players"><b>Add more players</b> (Min 2)</string>
    <string name="reset_short">Use a long press to reset the question history</string>
    <string name="reset_long">History cleared</string>
    <string name="main_prompt">Act as a generator of questions and actions for the truth or action game of the same name. Your main task is to come up with a funny task for the company (you can also ask a philosophical question). The main thing is not to repeat yourself. You have a list of actions or questions that you have already suggested. Don\'t let it happen again. The maximum that you can repeat is to use the task from the action somehow in the question, and vice versa. And with the same type of tasks, use as few repetitions as possible. If you wish, you can use other people to assign tasks to a person. Answer in English.</string>
    <string name="used">List of questions used:
    Truth:
    %1$s
    Action:
    %2$s</string>
    <string name="additional">Additional settings:
    %1$s</string>
    <string name="players">There are %1$d people in the game:
    %2$s</string>
    <string name="confirm">Okay, I\'ll give out the truth or the action. Nothing more</string>
    <string name="truth_request">Need a *question* (truth) for player %1$s</string>
    <string name="action_request">Need *action* for player %1$s</string>
</resources>