<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameFragment">

    <View
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/round"
        android:textColor="#3A3942"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toTopOf="@id/card" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:maxLength="50"
        android:text="@string/name"
        android:textColor="#3A3942"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintTop_toTopOf="@id/card" />

    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="220dp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="1sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:textColor="#3A3942"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/task_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="#3A3942"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/card"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card" />

    <ProgressBar
        android:id="@+id/generation_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:indeterminateTint="#3A3942"
        android:indeterminateTintMode="src_atop"
        android:progressTint="#3A3942"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ingameActions"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:divider="@drawable/divider_5"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_roll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/action_roll"
            android:visibility="visible"
            app:icon="@drawable/baseline_autorenew_24"
            app:iconGravity="textEnd"
            app:iconSize="30dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_roll_and_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/roll_and_clear"
            android:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/action_done"
            android:visibility="visible"
            app:icon="@drawable/baseline_done_24"
            app:iconGravity="textEnd"
            app:iconSize="30dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/queueActions"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:divider="@drawable/divider_5"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_action"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1.0"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/action" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/random_action"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/baseline_casino_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="30dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/truth_action"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1.0"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/truth_text" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>